# storage/api-docs/api-docs.json
@@ -72,6 +72,87 @@
                     }
                 }
             }
+        },
+        "/api/articles/{id}/comment": {
+            "post": {
+                "description": "Creates comment on a particular article",
+                "operationId": "f1ba61705bc001a859715f7506765435",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of article to comment on",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Input data format",
+                    "content": {
+                        "application/x-www-form-urlencoded": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "description": "name of person making the comment",
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "description": "Email address of the person making the comment.",
+                                        "type": "string"
+                                    },
+                                    "subject": {
+                                        "description": "subject of the comment",
+                                        "type": "string"
+                                    },
+                                    "article_id": {
+                                        "description": "ID of article for the comment",
+                                        "type": "string"
+                                    },
+                                    "body": {
+                                        "description": "Actual comment itself",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "422": {
+                        "description": "Invalid input or incomplete form entry"
+                    },
+                    "200": {
+                        "description": "Successful"
+                    }
+                }
+            }
+        },
+        "/api/articles/{id}/like": {
+            "get": {
+                "description": "Endpoint to like a particular article",
+                "operationId": "69535ebb2c417a8154e3dd0360cc9c21",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of article to like",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns an integer which represents the updated number of likes for the article"
+                    }
+                }
+            }
         }
     }
 }
